# TeamExecutor

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: pre_tool_use.sh  stop.sh
.console/: backlog.md  guidelines.md  log.md  task.md
.context/: config.yaml
.context/templates/: clp_config.template.yaml  investigation_capsule.template.yaml  loop_checkpoint.template.yaml  worker_handoff.template.yaml
.custodian/: config.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  custodian-audit.yml
.hooks/: pre-push
src/team_executor/: __init__.py  advisor.py  agent_call.py  checkpoint.py  config_loader.py  coordinator.py  evidence.py  executor.py  git_ops.py  models.py  quick_check.py  stage_planner.py  summarizer.py  verifier.py  worker.py
src/team_executor/teams/: budget.yaml  default.yaml  premium.yaml  standard.yaml
tests/: conftest.py  test_checkpoint.py  test_config_loader.py  test_coordinator.py  test_evidence.py  test_executor.py  test_models.py  test_primitives.py  test_stage_planner.py  test_verifier.py
tests/unit/: __init__.py  test_advisor.py  test_agent_call.py  test_git_ops.py  test_quick_check.py  test_summarizer.py  test_worker.py
