[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "team-executor"
version = "0.1.0"
description = "Team topology executor for the owned execution topology layer"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "orjson>=3.9",
  "tiktoken>=0.7",
  "rxp @ git+https://github.com/ProtocolWarden/RxP.git",
  "cxrp @ git+https://github.com/ProtocolWarden/CxRP.git@v0.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "custodian @ git+https://github.com/ProtocolWarden/Custodian.git@main",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"team_executor" = ["teams/*.yaml"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
markers = [
  "integration: requires live external service (Anthropic API)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
